--- a/crm/package.json
+++ b/crm/package.json
@@ -2,23 +2,40 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "vite build",
-        "dev": "vite"
+        "preview": "vite preview --port 5173"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^6.0.1",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
+        "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "@vueuse/core": "^13.9.0",
+        "@vueuse/head": "^2.0.0",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.12.2",
+        "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^6.0.11"
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^6.0.11",
+        "vue": "^3.4.0"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.5",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@vee-validate/zod": "^4.15.1",
+        "chokidar": "^4.0.3",
         "maska": "^3.2.0",
+        "primeicons": "^7.0.0",
+        "primevue": "^4.3.9",
+        "sonner": "^2.0.7",
+        "tailwindcss-animate": "^1.0.7",
+        "vee-validate": "^4.15.1",
         "vue": "^3.5.21",
-        "vue-toastification": "^2.0.0-rc.5"
+        "vue-toastification": "^2.0.0-rc.5",
+        "zod": "^3.25.76"
     }
 }
