--- a/crm/package.json
+++ b/crm/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@vee-validate/zod": "^4.15.1",
         "chokidar": "^4.0.3",
+        "lucide-vue-next": "^0.544.0",
         "maska": "^3.2.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
